# semester2/week12/seckill/api/user/v1/user.pb.go
@@ -190,6 +190,102 @@ func (x *GetUserReply) GetId() int64 {
 	return 0
 }
 
+type DeductBalanceRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	Amount        int64                  `protobuf:"varint,2,opt,name=amount,proto3" json:"amount,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *DeductBalanceRequest) Reset() {
+	*x = DeductBalanceRequest{}
+	mi := &file_api_user_v1_user_proto_msgTypes[4]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *DeductBalanceRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*DeductBalanceRequest) ProtoMessage() {}
+
+func (x *DeductBalanceRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_user_v1_user_proto_msgTypes[4]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use DeductBalanceRequest.ProtoReflect.Descriptor instead.
+func (*DeductBalanceRequest) Descriptor() ([]byte, []int) {
+	return file_api_user_v1_user_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *DeductBalanceRequest) GetId() int64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+func (x *DeductBalanceRequest) GetAmount() int64 {
+	if x != nil {
+		return x.Amount
+	}
+	return 0
+}
+
+type DeductBalanceReply struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Success       bool                   `protobuf:"varint,1,opt,name=success,proto3" json:"success,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *DeductBalanceReply) Reset() {
+	*x = DeductBalanceReply{}
+	mi := &file_api_user_v1_user_proto_msgTypes[5]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *DeductBalanceReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*DeductBalanceReply) ProtoMessage() {}
+
+func (x *DeductBalanceReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_user_v1_user_proto_msgTypes[5]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use DeductBalanceReply.ProtoReflect.Descriptor instead.
+func (*DeductBalanceReply) Descriptor() ([]byte, []int) {
+	return file_api_user_v1_user_proto_rawDescGZIP(), []int{5}
+}
+
+func (x *DeductBalanceReply) GetSuccess() bool {
+	if x != nil {
+		return x.Success
+	}
+	return false
+}
+
 var File_api_user_v1_user_proto protoreflect.FileDescriptor
 
 const file_api_user_v1_user_proto_rawDesc = "" +
@@ -201,10 +297,16 @@ const file_api_user_v1_user_proto_rawDesc = "" +
 	"\x0eGetUserRequest\x12\x0e\n" +
 	"\x02id\x18\x01 \x01(\x03R\x02id\"\x1e\n" +
 	"\fGetUserReply\x12\x0e\n" +
-	"\x02id\x18\x01 \x01(\x03R\x02id2\xc3\x01\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\">\n" +
+	"\x14DeductBalanceRequest\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\x12\x16\n" +
+	"\x06amount\x18\x02 \x01(\x03R\x06amount\".\n" +
+	"\x12DeductBalanceReply\x12\x18\n" +
+	"\asuccess\x18\x01 \x01(\bR\asuccess2\x9a\x02\n" +
 	"\x04User\x12b\n" +
 	"\bRegister\x12\x1e.api.user.v1.CreateUserRequest\x1a\x1c.api.user.v1.CreateUserReply\"\x18\x82\xd3\xe4\x93\x02\x12:\x01*\"\r/api/register\x12W\n" +
-	"\aGetUser\x12\x1b.api.user.v1.GetUserRequest\x1a\x19.api.user.v1.GetUserReply\"\x14\x82\xd3\xe4\x93\x02\x0e:\x01*\"\t/api/userB'\n" +
+	"\aGetUser\x12\x1b.api.user.v1.GetUserRequest\x1a\x19.api.user.v1.GetUserReply\"\x14\x82\xd3\xe4\x93\x02\x0e:\x01*\"\t/api/user\x12U\n" +
+	"\rDeductBalance\x12!.api.user.v1.DeductBalanceRequest\x1a\x1f.api.user.v1.DeductBalanceReply\"\x00B'\n" +
 	"\vapi.user.v1P\x01Z\x16seckill/api/user/v1;v1b\x06proto3"
 
 var (
@@ -219,20 +321,24 @@ func file_api_user_v1_user_proto_rawDescGZIP() []byte {
 	return file_api_user_v1_user_proto_rawDescData
 }
 
-var file_api_user_v1_user_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
+var file_api_user_v1_user_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
 var file_api_user_v1_user_proto_goTypes = []any{
-	(*CreateUserRequest)(nil), // 0: api.user.v1.CreateUserRequest
-	(*CreateUserReply)(nil),   // 1: api.user.v1.CreateUserReply
-	(*GetUserRequest)(nil),    // 2: api.user.v1.GetUserRequest
-	(*GetUserReply)(nil),      // 3: api.user.v1.GetUserReply
+	(*CreateUserRequest)(nil),    // 0: api.user.v1.CreateUserRequest
+	(*CreateUserReply)(nil),      // 1: api.user.v1.CreateUserReply
+	(*GetUserRequest)(nil),       // 2: api.user.v1.GetUserRequest
+	(*GetUserReply)(nil),         // 3: api.user.v1.GetUserReply
+	(*DeductBalanceRequest)(nil), // 4: api.user.v1.DeductBalanceRequest
+	(*DeductBalanceReply)(nil),   // 5: api.user.v1.DeductBalanceReply
 }
 var file_api_user_v1_user_proto_depIdxs = []int32{
 	0, // 0: api.user.v1.User.Register:input_type -> api.user.v1.CreateUserRequest
 	2, // 1: api.user.v1.User.GetUser:input_type -> api.user.v1.GetUserRequest
-	1, // 2: api.user.v1.User.Register:output_type -> api.user.v1.CreateUserReply
-	3, // 3: api.user.v1.User.GetUser:output_type -> api.user.v1.GetUserReply
-	2, // [2:4] is the sub-list for method output_type
-	0, // [0:2] is the sub-list for method input_type
+	4, // 2: api.user.v1.User.DeductBalance:input_type -> api.user.v1.DeductBalanceRequest
+	1, // 3: api.user.v1.User.Register:output_type -> api.user.v1.CreateUserReply
+	3, // 4: api.user.v1.User.GetUser:output_type -> api.user.v1.GetUserReply
+	5, // 5: api.user.v1.User.DeductBalance:output_type -> api.user.v1.DeductBalanceReply
+	3, // [3:6] is the sub-list for method output_type
+	0, // [0:3] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -249,7 +355,7 @@ func file_api_user_v1_user_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_user_v1_user_proto_rawDesc), len(file_api_user_v1_user_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   4,
+			NumMessages:   6,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
