# semester2/week12/seckill/openapi.yaml
@@ -3,19 +3,19 @@
 
 openapi: 3.0.3
 info:
-    title: Product API
+    title: User API
     version: 0.0.1
 paths:
-    /api/seckill:
-        get:
+    /api/register:
+        post:
             tags:
-                - Product
-            operationId: Product_Seckill
+                - User
+            operationId: User_Register
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/SeckillReq'
+                            $ref: '#/components/schemas/CreateUserRequest'
                 required: true
             responses:
                 "200":
@@ -23,7 +23,31 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/SeckillResp'
+                                $ref: '#/components/schemas/CreateUserReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/user:
+        post:
+            tags:
+                - User
+            operationId: User_GetUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/GetUserRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetUserReply'
                 default:
                     description: Default error response
                     content:
@@ -32,6 +56,24 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
+        CreateUserReply:
+            type: object
+            properties:
+                id:
+                    type: string
+        CreateUserRequest:
+            type: object
+            properties: {}
+        GetUserReply:
+            type: object
+            properties:
+                id:
+                    type: string
+        GetUserRequest:
+            type: object
+            properties:
+                id:
+                    type: string
         GoogleProtobufAny:
             type: object
             properties:
@@ -40,15 +82,6 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        SeckillReq:
-            type: object
-            properties: {}
-        SeckillResp:
-            type: object
-            properties:
-                res:
-                    type: integer
-                    format: enum
         Status:
             type: object
             properties:
@@ -66,4 +99,4 @@ components:
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
-    - name: Product
+    - name: User
